--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="/styles/normalize.css">
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
   <div class="page">
+    <header class="header">
 
+      <div class="header-logo logo_place_header"></div>
+      <h1 class="header__title margin-reset">Научиться учиться</h1>
+      <p class="header__subtitle margin-reset">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a>
+      </p>
+      <div class="header__main-illustration"></div>
+      <div class="header__square-pic"></div>
+    </header>
+
+    <main class="content">
+      <section class="description"></section>
+      <section class="digits"></section>
+      <section class="feynman"></section>
+      <section class="kaufman"></section>
+    </main>
+    
+    <footer class="footer"></footer>
   </div>
 </body>
 </html>
