--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     </header>
 
     <main class="content">
-      <section class="description"></section>
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <p class="two-columns__main-text">
+            <p class="two-columns__paragraph"></p>
+            <p class="two-columns__paragraph"></p>
+            <p class="two-columns__paragraph"></p>
+          </p>
+        </div>
+      </section>
       <section class="digits"></section>
       <section class="feynman"></section>
       <section class="kaufman"></section>
