--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="/styles/normalize.css">
   <link rel="stylesheet" href="/styles/style.css">
 </head>
+
 <body>
   <div class="page">
     <header class="header">
@@ -14,7 +16,8 @@
       <div class="header-logo logo_place_header"></div>
       <h1 class="header__title margin-reset">Научиться учиться</h1>
       <p class="header__subtitle margin-reset">
-        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a>
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#"
+          class="header__link">Узнать &rarr;</a>
       </p>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic"></div>
@@ -23,20 +26,85 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-          <p class="two-columns__main-text">
-            <p class="two-columns__paragraph"></p>
-            <p class="two-columns__paragraph"></p>
-            <p class="two-columns__paragraph"></p>
-          </p>
+          <h2 class="two-columns__brief margin-reset">Главные проблемы в обучении</h2>
+          <ul class="two-columns__main-text">
+            <li class="two-columns__paragraph">
+              <p class="two-columns__paragraph-text margin-reset">
+                Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
+                учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
+                дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+              </p>
+            </li>
+            <li class="two-columns__paragraph">
+              <p class="two-columns__paragraph-text margin-reset"><span class="two-columns__span-accent">Вывод:</span>
+                учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+              </p>
+            </li>
+            <li class="two-columns__paragraph">
+              <p class="two-columns__paragraph-text margin-reset">Конкретные техники и упражнения помогают изменить
+                подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере
+                обучения в Практикуме.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
-      <section class="digits"></section>
+
+
+      <section class="digits">
+        <h2 class="section-title margin-reset">Цифры и факты</h2>
+        <h3 class="section-subtitle margin-reset">Про учёбу и мозг</h3>
+        <table class="table digits-table">
+          <tr class="table__row">
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">86 миллиардов</h4>
+              <p class="table__text margin-reset">Число нейронов в мозге человека</p>
+            </td>
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">2.1 миллиарда</h4>
+              <p class="table__text margin-reset">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text margin-reset">Всемирный Банк, 2017</p>
+            </td>
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">1000 терабайт</h4>
+              <p class="table__text margin-reset">Объём памяти человека</p>
+            </td>
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">500 триллионов</h4>
+              <p class="table__text margin-reset">Число ответственных за обучение нервных синапсов у взрослого человека
+              </p>
+            </td>
+          </tr>
+          <tr class="table__row">
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">420 миллионов</h4>
+              <p class="table__text margin-reset">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+              </p>
+              <p class="table__text margin-reset">Всемирный Банк, 2017</p>
+            </td>
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">17–20 лет</h4>
+              <p class="table__text margin-reset">Пик обучаемости</p>
+            </td>
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">1885 год</h4>
+              <p class="table__text margin-reset">Открытие кривой забывания</p>
+            </td>
+            <td class="table__cell digits__cell">
+              <h4 class="table__heading margin-reset">1889 год</h4>
+              <p class="table__text margin-reset">Открытие условного рефлекса</p>
+            </td>
+          </tr>
+        </table>
+      </section>
+
+
       <section class="feynman"></section>
       <section class="kaufman"></section>
     </main>
-    
+
     <footer class="footer"></footer>
   </div>
 </body>
+
 </html>
