--- a/index.html
+++ b/index.html
@@ -99,7 +99,15 @@
       </section>
 
 
-      <section class="feynman"></section>
+      <section class="feynman">
+
+        <h2 class="feynman-title margin-reset">Метод Фейнмана</h2>
+        <h3 class="feynman-subtitle margin-reset">Выучить и не забыть.</h3>
+        <a href="#" class="feynman-link">Подробнее &rarr;</a>
+
+      </section>
+
+
       <section class="kaufman"></section>
     </main>
 
