table_dark_theme is needed to fix

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="section-title margin-reset">Цифры и факты</h2>
         <h3 class="section-subtitle margin-reset">Про учёбу и мозг</h3>
         <table class="table digits-table">
-          <tr class="table__row">
+          <tr class="table__row digits__row">
             <td class="table__cell digits__cell">
               <h4 class="table__heading margin-reset">86 миллиардов</h4>
               <p class="table__text margin-reset">Число нейронов в мозге человека</p>
@@ -75,7 +75,7 @@
               </p>
             </td>
           </tr>
-          <tr class="table__row">
+          <tr class="table__row digits__row">
             <td class="table__cell digits__cell">
               <h4 class="table__heading margin-reset">420 миллионов</h4>
               <p class="table__text margin-reset">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
@@ -108,7 +108,58 @@
       </section>
 
 
-      <section class="kaufman"></section>
+      <section class="kaufman">
+
+        <h2 class="section-title section-title_theme_dark margin-reset">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark margin-reset">от Джоша Кауфмана</h3>
+        <table class="table table_theme_dark kaufman-table">
+          <tr class="table__row kaufman__row">
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">1</h4>
+              <p class="table__text margin-reset">Выберите привлекательный проект.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">2</h4>
+              <p class="table__text margin-reset">Сосредоточьтесь на каком-то одном навыке.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">3</h4>
+              <p class="table__text margin-reset">Определите целевой уровень мастерства.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">4</h4>
+              <p class="table__text margin-reset">Разбейте навык на элементы.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">5</h4>
+              <p class="table__text margin-reset">Приготовьте всё необходимое для занятий.</p>
+            </td>
+          </tr>
+          <tr class="table__row kaufman__row">
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">6</h4>
+              <p class="table__text margin-reset">Устраните препятствия для занятий.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">7</h4>
+              <p class="table__text margin-reset">Выделите специальное время для занятий.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">8</h4>
+              <p class="table__text margin-reset">Создайте быстрые петли обратной связи.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">9</h4>
+              <p class="table__text margin-reset">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading margin-reset">10</h4>
+              <p class="table__text margin-reset">Уделяйте внимание количеству и скорости.</p>
+            </td>
+          </tr>
+        </table>
+        <div class="kaufman__triangle"></div>
+      </section>
     </main>
 
     <footer class="footer"></footer>
