--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section class="digits">
         <h2 class="section-title margin-reset">Цифры и факты</h2>
         <h3 class="section-subtitle margin-reset">Про учёбу и мозг</h3>
-        <table class="table digits-table">
+        <table class="table">
           <tr class="table__row digits__row">
             <td class="table__cell digits__cell">
               <h4 class="table__heading margin-reset">86 миллиардов</h4>
