--- a/index.html
+++ b/index.html
@@ -162,7 +162,51 @@
       </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <section class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo_place_footer footer-logo"></div>
+          <p class="footer-author margin-reset">&copy; Andrey Sapo</p>
+        </div>
+        <div class="footer-column_content_info">
+          <h2 class="footer__column-heading margin-reset">О Практикуме</h2>
+          <ul class="footer__column-links margin-reset">
+            <li>
+              <a href="#" class="footer__column-link margin-reset">Главная</a>              
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Концепция</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-column_content_social">
+          <h2 class="footer__column-heading margin-reset">Соцсети</h2>
+          <ul class="footer__column-links margin-reset">
+            <li>
+              <a href="#" class="footer__column-link margin-reset">
+                <img src="/images/facebook_color_white.svg" alt="Facebook icon" class="footer__social-icon">
+                Facebook
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link margin-reset">
+                <img src="/images/vk_color_white.svg" alt="VK icon" class="footer__social-icon">
+                Вконтакте
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link margin-reset">
+                <img src="/images/instagram_color_white.svg" alt="Instagram icon" class="footer__social-icon">
+                Instagram
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </footer>
   </div>
 </body>
 
