img's alts were fixed

--- a/index.html
+++ b/index.html
@@ -187,19 +187,19 @@
           <ul class="footer__column-links margin-reset">
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/facebook_color_white.svg" alt="Facebook icon" class="footer__social-icon">
+                <img src="/images/facebook_color_white.svg" alt="Image of the Facebook icon" class="footer__social-icon">
                 Facebook
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/vk_color_white.svg" alt="VK icon" class="footer__social-icon">
+                <img src="/images/vk_color_white.svg" alt="Image of the VK icon" class="footer__social-icon">
                 Вконтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/instagram_color_white.svg" alt="Instagram icon" class="footer__social-icon">
+                <img src="/images/instagram_color_white.svg" alt="Image of theInstagram icon" class="footer__social-icon">
                 Instagram
               </a>
             </li>
