--- a/index.html
+++ b/index.html
@@ -187,19 +187,19 @@
           <ul class="footer__column-links margin-reset">
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/facebook_color_white.svg" alt="Image of the Facebook icon" class="footer__social-icon">
+                <img src="/images/facebook_color_white.svg" alt="Иконка Фейсбука" class="footer__social-icon">
                 Facebook
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/vk_color_white.svg" alt="Image of the VK icon" class="footer__social-icon">
-                Вконтакте
+                <img src="/images/vk_color_white.svg" alt="Иконка ВКонтакте" class="footer__social-icon">
+                ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/instagram_color_white.svg" alt="Image of theInstagram icon" class="footer__social-icon">
+                <img src="/images/instagram_color_white.svg" alt="Иконка Инстаграм" class="footer__social-icon">
                 Instagram
               </a>
             </li>
