fix after the first review
Необходимо было исправить пути до css файлов и изображений (для тех, что подключены через тег img и для тех, которые подключены через background-image внутри css-файла).

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -187,19 +187,19 @@
           <ul class="footer__column-links margin-reset">
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/facebook_color_white.svg" alt="Иконка Фейсбука" class="footer__social-icon">
+                <img src="./images/facebook_color_white.svg" alt="Иконка Фейсбука" class="footer__social-icon">
                 Facebook
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/vk_color_white.svg" alt="Иконка ВКонтакте" class="footer__social-icon">
+                <img src="./images/vk_color_white.svg" alt="Иконка ВКонтакте" class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link margin-reset">
-                <img src="/images/instagram_color_white.svg" alt="Иконка Инстаграм" class="footer__social-icon">
+                <img src="./images/instagram_color_white.svg" alt="Иконка Инстаграм" class="footer__social-icon">
                 Instagram
               </a>
             </li>
