--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <header class="header">
 
       <div class="header-logo logo_place_header"></div>
+      <!--  1) По брифу блок с логотипом необходимо назвать как logo
+            2) Модификаторы не могут использоваться вне своего блока. Но если исправить пункт 1 в соответствии с  брифом, то ошибка станет неактуальна. Придерживайтесь правила именования модификаторов: block block_mod_value -->
+
       <h1 class="header__title margin-reset">Научиться учиться</h1>
       <p class="header__subtitle margin-reset">
+      <!-- Отступы лучше сбрасывыть на уровне блока, поэтому возможно стоит отказаться от использования микса с классом margin-reset и сбрасывать margin и padding непосредственно для каждого блока отдельно. -->
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#"
           class="header__link">Узнать &rarr;</a>
       </p>
@@ -28,7 +32,10 @@
         <div class="two-columns">
           <h2 class="two-columns__brief margin-reset">Главные проблемы в обучении</h2>
           <ul class="two-columns__main-text">
+          <!-- two-columns__main-text это просто блок с текстовым содержимым. Здесь нет необходимости использовать списки ul.   -->
             <li class="two-columns__paragraph">
+            <!--1) Если убрать ul, то и li тоже необходимо убрать. Здесь должно быть несколько параграфов p с одинаковым классом.
+                2) Обратите внимание, что здесь необходимо сбросить отступы для элемента параграфа, а класс margin-reset убрать. -->
               <p class="two-columns__paragraph-text margin-reset">
                 Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
                 учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
@@ -53,10 +60,16 @@
 
       <section class="digits">
         <h2 class="section-title margin-reset">Цифры и факты</h2>
+        <!-- Отсутствует отступ между заголовков и подзаголовком согласно брифу. -->
         <h3 class="section-subtitle margin-reset">Про учёбу и мозг</h3>
+        <!-- Для подзаголовков хорошей практикой является использование параграфа p -->
         <table class="table">
+        <!-- Данный блок лучше реализовать через обычный список ul li. В брифе каждая отдельная ячейка - это однотипный элемент, где меняется только текст. Для подобных повторяющихся элементов подходят списки https://webref.ru/layout/learn-html-css/creating-lists
+        Кроме того, использование таблицы затрудняет дальнейшую адаптацию под разные размеры устройств.
+        Обратите внимание, что при использовании списков необходимо сбросить стили, применяющиеся по умолчанию. -->
           <tr class="table__row digits__row">
             <td class="table__cell digits__cell">
+            <!-- Согласно брифу это элемент table__cell. Нет необходимости добавлять дополнительные классы. Все стили имеет смысл прописать непосредственно для элемента (а ниже на странице в похожем элементе классы будут переопределяться через модификаторы). -->
               <h4 class="table__heading margin-reset">86 миллиардов</h4>
               <p class="table__text margin-reset">Число нейронов в мозге человека</p>
             </td>
@@ -102,8 +115,12 @@
       <section class="feynman">
 
         <h2 class="feynman-title margin-reset">Метод Фейнмана</h2>
+        <!-- feynman-title  - это не самостоятельный блок. Согласно брифу это элемент title блока feynman. Придерживайтесь нейминга block__element -->
         <h3 class="feynman-subtitle margin-reset">Выучить и не забыть.</h3>
+        <!-- 1) feynman-subtitle  - это не самостоятельный блок. Согласно брифу это элемент subtitle блока feynman. Придерживайтесь нейминга block__element
+        2) Хорошей практикой для подзаголовков является использование параграфов p -->
         <a href="#" class="feynman-link">Подробнее &rarr;</a>
+        <!-- feynman-link  - это не самостоятельный блок. Согласно брифу это элемент link блока feynman. Придерживайтесь нейминга block__element -->
 
       </section>
 
@@ -112,7 +129,10 @@
 
         <h2 class="section-title section-title_theme_dark margin-reset">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark margin-reset">от Джоша Кауфмана</h3>
+        <!-- Хорошей практикой является использование параграфа p для подзаголовка. -->
         <table class="table table_theme_dark kaufman-table">
+        <!--  1) Компонент table используется повторно на странице, поэтому здесь так же справедливы замечания по исправлению тега table на список ul как в разделе "Цифры и факты"
+              2) класс kaufman-table лишний - необходимые стили можно добавить к модификатору table_theme_dark -->
           <tr class="table__row kaufman__row">
             <td class="table__cell table__cell_theme_dark">
               <h4 class="table__heading margin-reset">1</h4>
@@ -165,12 +185,23 @@
     <footer class="footer">
       <section class="footer__columns">
         <div class="footer__column_content_copyright">
+        <!-- Класс не соответствует БЭМ. Не хватает класса от которого образован модификатор
+             Придерживайтесь схемы: block__element block__element_mod_value -->
           <div class="logo_place_footer footer-logo"></div>
+          <!-- Согласно брифу это блок logo -->
           <p class="footer-author margin-reset">&copy; Andrey Sapo</p>
+          <!--  footer-author  - это не самостоятельный блок. Согласно брифу здесь блок footer, элемент author. 
+                Придерживайтесь схемы: block__element -->
         </div>
         <div class="footer-column_content_info">
+        <!--  1) Нет класса, от которого образован модификатор.
+              Придерживайтесь схемы: block__element block__element_mod_value
+              2) Название класса не соответствует брифу. -->
           <h2 class="footer__column-heading margin-reset">О Практикуме</h2>
+          <!-- Необходимо соблюдать иерархию заголовков на странице.
+               Подробнее:  https://www.w3.org/TR/html52/common-idioms-without-dedicated-elements.html#subheadings-subtitles-alternative-titles-and-taglines -->
           <ul class="footer__column-links margin-reset">
+          <!-- Семантически верно использовать для навигации на сайте тег nav (в данном случае этим тегом необходимо обернуть список ul) -->
             <li>
               <a href="#" class="footer__column-link margin-reset">Главная</a>              
             </li>
@@ -183,7 +214,11 @@
           </ul>
         </div>
         <div class="footer-column_content_social">
+        <!--  1) Нет класса, от которого образован модификатор.
+              Придерживайтесь схемы: block__element block__element_mod_value
+              2) Название класса не соответствует брифу. -->
           <h2 class="footer__column-heading margin-reset">Соцсети</h2>
+          <!-- Необходимо соблюдать иерархию заголовков на странице. -->
           <ul class="footer__column-links margin-reset">
             <li>
               <a href="#" class="footer__column-link margin-reset">
