--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
-      <!-- DONE
+        <!-- DONE
         Отступы лучше сбрасывыть на уровне блока, поэтому возможно стоит отказаться от использования микса с классом margin-reset и сбрасывать margin и padding непосредственно для каждого блока отдельно. -->
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#"
           class="header__link">Узнать &rarr;</a>
@@ -32,30 +32,22 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief margin-reset">Главные проблемы в обучении</h2>
-          <ul class="two-columns__main-text">
-          <!-- two-columns__main-text это просто блок с текстовым содержимым. Здесь нет необходимости использовать списки ul.   -->
-            <li class="two-columns__paragraph">
-            <!--1) Если убрать ul, то и li тоже необходимо убрать. Здесь должно быть несколько параграфов p с одинаковым классом.
-                2) Обратите внимание, что здесь необходимо сбросить отступы для элемента параграфа, а класс margin-reset убрать. -->
-              <p class="two-columns__paragraph-text margin-reset">
-                Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
-                учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
-                дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-              </p>
-            </li>
-            <li class="two-columns__paragraph">
-              <p class="two-columns__paragraph-text margin-reset"><span class="two-columns__span-accent">Вывод:</span>
-                учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-              </p>
-            </li>
-            <li class="two-columns__paragraph">
-              <p class="two-columns__paragraph-text margin-reset">Конкретные техники и упражнения помогают изменить
-                подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере
-                обучения в Практикуме.
-              </p>
-            </li>
-          </ul>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
+              учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
+              дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод:</span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">
+              Конкретные техники и упражнения помогают изменить
+              подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере
+              обучения в Практикуме.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -66,12 +58,12 @@
         <h3 class="section-subtitle margin-reset">Про учёбу и мозг</h3>
         <!-- Для подзаголовков хорошей практикой является использование параграфа p -->
         <table class="table">
-        <!-- Данный блок лучше реализовать через обычный список ul li. В брифе каждая отдельная ячейка - это однотипный элемент, где меняется только текст. Для подобных повторяющихся элементов подходят списки https://webref.ru/layout/learn-html-css/creating-lists
+          <!-- Данный блок лучше реализовать через обычный список ul li. В брифе каждая отдельная ячейка - это однотипный элемент, где меняется только текст. Для подобных повторяющихся элементов подходят списки https://webref.ru/layout/learn-html-css/creating-lists
         Кроме того, использование таблицы затрудняет дальнейшую адаптацию под разные размеры устройств.
         Обратите внимание, что при использовании списков необходимо сбросить стили, применяющиеся по умолчанию. -->
           <tr class="table__row digits__row">
             <td class="table__cell digits__cell">
-            <!-- Согласно брифу это элемент table__cell. Нет необходимости добавлять дополнительные классы. Все стили имеет смысл прописать непосредственно для элемента (а ниже на странице в похожем элементе классы будут переопределяться через модификаторы). -->
+              <!-- Согласно брифу это элемент table__cell. Нет необходимости добавлять дополнительные классы. Все стили имеет смысл прописать непосредственно для элемента (а ниже на странице в похожем элементе классы будут переопределяться через модификаторы). -->
               <h4 class="table__heading margin-reset">86 миллиардов</h4>
               <p class="table__text margin-reset">Число нейронов в мозге человека</p>
             </td>
@@ -93,7 +85,8 @@
           <tr class="table__row digits__row">
             <td class="table__cell digits__cell">
               <h4 class="table__heading margin-reset">420 миллионов</h4>
-              <p class="table__text margin-reset">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+              <p class="table__text margin-reset">Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
               </p>
               <p class="table__text margin-reset">Всемирный Банк, 2017</p>
             </td>
@@ -133,7 +126,7 @@
         <h3 class="section-subtitle section-subtitle_theme_dark margin-reset">от Джоша Кауфмана</h3>
         <!-- Хорошей практикой является использование параграфа p для подзаголовка. -->
         <table class="table table_theme_dark kaufman-table">
-        <!--  1) Компонент table используется повторно на странице, поэтому здесь так же справедливы замечания по исправлению тега table на список ul как в разделе "Цифры и факты"
+          <!--  1) Компонент table используется повторно на странице, поэтому здесь так же справедливы замечания по исправлению тега table на список ul как в разделе "Цифры и факты"
               2) класс kaufman-table лишний - необходимые стили можно добавить к модификатору table_theme_dark -->
           <tr class="table__row kaufman__row">
             <td class="table__cell table__cell_theme_dark">
@@ -187,7 +180,7 @@
     <footer class="footer">
       <section class="footer__columns">
         <div class="footer__column_content_copyright">
-        <!-- Класс не соответствует БЭМ. Не хватает класса от которого образован модификатор
+          <!-- Класс не соответствует БЭМ. Не хватает класса от которого образован модификатор
              Придерживайтесь схемы: block__element block__element_mod_value -->
           <div class="logo logo_place_footer"></div>
           <!-- DONE Согласно брифу это блок logo -->
@@ -196,16 +189,16 @@
                 Придерживайтесь схемы: block__element -->
         </div>
         <div class="footer-column_content_info">
-        <!--  1) Нет класса, от которого образован модификатор.
+          <!--  1) Нет класса, от которого образован модификатор.
               Придерживайтесь схемы: block__element block__element_mod_value
               2) Название класса не соответствует брифу. -->
           <h2 class="footer__column-heading margin-reset">О Практикуме</h2>
           <!-- Необходимо соблюдать иерархию заголовков на странице.
                Подробнее:  https://www.w3.org/TR/html52/common-idioms-without-dedicated-elements.html#subheadings-subtitles-alternative-titles-and-taglines -->
           <ul class="footer__column-links margin-reset">
-          <!-- Семантически верно использовать для навигации на сайте тег nav (в данном случае этим тегом необходимо обернуть список ul) -->
+            <!-- Семантически верно использовать для навигации на сайте тег nav (в данном случае этим тегом необходимо обернуть список ul) -->
             <li>
-              <a href="#" class="footer__column-link margin-reset">Главная</a>              
+              <a href="#" class="footer__column-link margin-reset">Главная</a>
             </li>
             <li>
               <a href="#" class="footer__column-link">Концепция</a>
@@ -216,7 +209,7 @@
           </ul>
         </div>
         <div class="footer-column_content_social">
-        <!--  1) Нет класса, от которого образован модификатор.
+          <!--  1) Нет класса, от которого образован модификатор.
               Придерживайтесь схемы: block__element block__element_mod_value
               2) Название класса не соответствует брифу. -->
           <h2 class="footer__column-heading margin-reset">Соцсети</h2>
