--- a/index.html
+++ b/index.html
@@ -53,57 +53,49 @@
 
 
       <section class="digits">
-        <h2 class="section-title margin-reset">Цифры и факты</h2>
-        <!-- Отсутствует отступ между заголовков и подзаголовком согласно брифу. -->
-        <h3 class="section-subtitle margin-reset">Про учёбу и мозг</h3>
-        <!-- Для подзаголовков хорошей практикой является использование параграфа p -->
-        <table class="table">
-          <!-- Данный блок лучше реализовать через обычный список ul li. В брифе каждая отдельная ячейка - это однотипный элемент, где меняется только текст. Для подобных повторяющихся элементов подходят списки https://webref.ru/layout/learn-html-css/creating-lists
-        Кроме того, использование таблицы затрудняет дальнейшую адаптацию под разные размеры устройств.
-        Обратите внимание, что при использовании списков необходимо сбросить стили, применяющиеся по умолчанию. -->
-          <tr class="table__row digits__row">
-            <td class="table__cell digits__cell">
-              <!-- Согласно брифу это элемент table__cell. Нет необходимости добавлять дополнительные классы. Все стили имеет смысл прописать непосредственно для элемента (а ниже на странице в похожем элементе классы будут переопределяться через модификаторы). -->
-              <h4 class="table__heading margin-reset">86 миллиардов</h4>
-              <p class="table__text margin-reset">Число нейронов в мозге человека</p>
-            </td>
-            <td class="table__cell digits__cell">
-              <h4 class="table__heading margin-reset">2.1 миллиарда</h4>
-              <p class="table__text margin-reset">Число нуждающихся в повышении квалификации</p>
-              <p class="table__text margin-reset">Всемирный Банк, 2017</p>
-            </td>
-            <td class="table__cell digits__cell">
-              <h4 class="table__heading margin-reset">1000 терабайт</h4>
-              <p class="table__text margin-reset">Объём памяти человека</p>
-            </td>
-            <td class="table__cell digits__cell">
-              <h4 class="table__heading margin-reset">500 триллионов</h4>
-              <p class="table__text margin-reset">Число ответственных за обучение нервных синапсов у взрослого человека
-              </p>
-            </td>
-          </tr>
-          <tr class="table__row digits__row">
-            <td class="table__cell digits__cell">
-              <h4 class="table__heading margin-reset">420 миллионов</h4>
-              <p class="table__text margin-reset">Число взрослых людей моложе 25 лет, не имеющих образования для
-                трудоустройства
-              </p>
-              <p class="table__text margin-reset">Всемирный Банк, 2017</p>
-            </td>
-            <td class="table__cell digits__cell">
-              <h4 class="table__heading margin-reset">17–20 лет</h4>
-              <p class="table__text margin-reset">Пик обучаемости</p>
-            </td>
-            <td class="table__cell digits__cell">
-              <h4 class="table__heading margin-reset">1885 год</h4>
-              <p class="table__text margin-reset">Открытие кривой забывания</p>
-            </td>
-            <td class="table__cell digits__cell">
-              <h4 class="table__heading margin-reset">1889 год</h4>
-              <p class="table__text margin-reset">Открытие условного рефлекса</p>
-            </td>
-          </tr>
-        </table>
+        <h2 class="section-title">Цифры и факты</h2>
+        <!-- DONE
+          Отсутствует отступ между заголовков и подзаголовком согласно брифу. -->
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <!-- DONE
+          Для подзаголовков хорошей практикой является использование параграфа p -->
+
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
 
