--- a/index.html
+++ b/index.html
@@ -101,13 +101,16 @@
 
       <section class="feynman">
 
-        <h2 class="feynman-title margin-reset">Метод Фейнмана</h2>
-        <!-- feynman-title  - это не самостоятельный блок. Согласно брифу это элемент title блока feynman. Придерживайтесь нейминга block__element -->
-        <h3 class="feynman-subtitle margin-reset">Выучить и не забыть.</h3>
-        <!-- 1) feynman-subtitle  - это не самостоятельный блок. Согласно брифу это элемент subtitle блока feynman. Придерживайтесь нейминга block__element
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <!-- DONE
+          feynman-title  - это не самостоятельный блок. Согласно брифу это элемент title блока feynman. Придерживайтесь нейминга block__element -->
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <!-- DONE
+          1) feynman-subtitle  - это не самостоятельный блок. Согласно брифу это элемент subtitle блока feynman. Придерживайтесь нейминга block__element
         2) Хорошей практикой для подзаголовков является использование параграфов p -->
-        <a href="#" class="feynman-link">Подробнее &rarr;</a>
-        <!-- feynman-link  - это не самостоятельный блок. Согласно брифу это элемент link блока feynman. Придерживайтесь нейминга block__element -->
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <!-- DONE
+          feynman-link  - это не самостоятельный блок. Согласно брифу это элемент link блока feynman. Придерживайтесь нейминга block__element -->
 
       </section>
 
