--- a/index.html
+++ b/index.html
@@ -118,56 +118,51 @@
       <section class="kaufman">
 
         <h2 class="section-title section-title_theme_dark margin-reset">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark margin-reset">от Джоша Кауфмана</h3>
-        <!-- Хорошей практикой является использование параграфа p для подзаголовка. -->
-        <table class="table table_theme_dark kaufman-table">
-          <!--  1) Компонент table используется повторно на странице, поэтому здесь так же справедливы замечания по исправлению тега table на список ul как в разделе "Цифры и факты"
-              2) класс kaufman-table лишний - необходимые стили можно добавить к модификатору table_theme_dark -->
-          <tr class="table__row kaufman__row">
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">1</h4>
-              <p class="table__text margin-reset">Выберите привлекательный проект.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">2</h4>
-              <p class="table__text margin-reset">Сосредоточьтесь на каком-то одном навыке.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">3</h4>
-              <p class="table__text margin-reset">Определите целевой уровень мастерства.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">4</h4>
-              <p class="table__text margin-reset">Разбейте навык на элементы.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">5</h4>
-              <p class="table__text margin-reset">Приготовьте всё необходимое для занятий.</p>
-            </td>
-          </tr>
-          <tr class="table__row kaufman__row">
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">6</h4>
-              <p class="table__text margin-reset">Устраните препятствия для занятий.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">7</h4>
-              <p class="table__text margin-reset">Выделите специальное время для занятий.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">8</h4>
-              <p class="table__text margin-reset">Создайте быстрые петли обратной связи.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">9</h4>
-              <p class="table__text margin-reset">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading margin-reset">10</h4>
-              <p class="table__text margin-reset">Уделяйте внимание количеству и скорости.</p>
-            </td>
-          </tr>
-        </table>
+        <p class="section-subtitle section-subtitle_theme_dark margin-reset">от Джоша Кауфмана</p>
+        <!-- DONE Хорошей практикой является использование параграфа p для подзаголовка. -->
+        
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
