header+description cleared and done

--- a/index.html
+++ b/index.html
@@ -12,16 +12,9 @@
 <body>
   <div class="page">
     <header class="header">
-
       <div class="logo logo_place_header"></div>
-      <!--  DONE
-            1) По брифу блок с логотипом необходимо назвать как logo
-            2) Модификаторы не могут использоваться вне своего блока. Но если исправить пункт 1 в соответствии с  брифом, то ошибка станет неактуальна. Придерживайтесь правила именования модификаторов: block block_mod_value -->
-
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
-        <!-- DONE
-        Отступы лучше сбрасывыть на уровне блока, поэтому возможно стоит отказаться от использования микса с классом margin-reset и сбрасывать margin и padding непосредственно для каждого блока отдельно. -->
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#"
           class="header__link">Узнать &rarr;</a>
       </p>
@@ -206,7 +199,7 @@
               Придерживайтесь схемы: block__element block__element_mod_value
               2) Название класса не соответствует брифу. -->
           
-          <!-- Необходимо соблюдать иерархию заголовков на странице. -->
+          <!-- DONE Необходимо соблюдать иерархию заголовков на странице. -->
           <nav>
             <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
