--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
     </main>
 
     <footer class="footer">
-      <!-- section можно заменить на обычный div  -->
-      <section class="footer__columns">
+      <!-- DONE section можно заменить на обычный div  -->
+      <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; Andrey Sapo</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <!-- Заголовок не относится к навигации, поэтому его нужно вынести из тега nav. Внутри навигации необходимо оставить только список ссылок ul li -->
+          <!-- DONE Заголовок не относится к навигации, поэтому его нужно вынести из тега nav. Внутри навигации необходимо оставить только список ссылок ul li -->
+          <h3 class="footer__column-heading">О Практикуме</h3>
           <nav>
-            <h3 class="footer__column-heading">О Практикуме</h3>
             <ul class="footer__column-links">
               <li>
                 <a href="#" class="footer__column-link">Главная</a>
@@ -171,9 +171,9 @@
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
-          <!-- Заголовок не относится к навигации, поэтому его нужно вынести из тега nav. Внутри навигации необходимо оставить только список ссылок ul li -->
+          <!-- DONE Заголовок не относится к навигации, поэтому его нужно вынести из тега nav. Внутри навигации необходимо оставить только список ссылок ul li -->
+          <h3 class="footer__column-heading">Соцсети</h3>
           <nav>
-            <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
               <li>
                 <a href="#" class="footer__column-link">
@@ -196,7 +196,7 @@
             </ul>
           </nav>
         </div>
-      </section>
+      </div>
     </footer>
   </div>
 </body>
