--- a/index.html
+++ b/index.html
@@ -45,6 +45,53 @@
       </section>
 
 
+      <section class="techniques">
+
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="./images/cards-attention.png" alt="Картинка Два вида внимания" class="card__image">
+            <h3 class="card__title">Два вида внимания</h3>
+            <p class="card__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-recall.png" alt="Картинка Recall" class="card__image">
+            <h3 class="card__title">Recall</h3>
+            <p class="card__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-interliving.png" alt="Картинка Интерливинг" class="card__image">
+            <h3 class="card__title">Интерливинг</h3>
+            <p class="card__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-question.png" alt="Картинка Вопросы" class="card__image">
+            <h3 class="card__title">Вопросы</h3>
+            <p class="card__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-competence.png" alt="Картинка Иллюзия компетентности" class="card__image">
+            <h3 class="card__title">Иллюзия компетентности</h3>
+            <p class="card__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+          <li class="cards__item">
+            <!-- <img src="" alt="" class="card__image"> -->
+            <h3 class="card__title"></h3>
+            <p class="card__description"></p>
+          </li>
+        </ul>
+
+      </section>
+
+
+      <section class="video"></section>
+
+
+      <section class="oakley"></section>
+
+
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
