--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </li>
           <li class="cards__item">
             <!-- <img src="" alt="" class="cards__image"> -->
-            <h3 class="cards__title"></h3>
+            <!-- <h3 class="cards__title"></h3> -->
             <p class="cards__description"></p>
           </li>
         </ul>
@@ -89,12 +89,10 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
-            frameborder="0"
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="Джош Кауфман. Как выучить всё. Видео на YouTube"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen class="video__iframe"></iframe>
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
-            frameborder="0"
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="Тим Урбан: внутренние мысли мастера прокрастинации"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen class="video__iframe"></iframe>
         </div>
