--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#"
-          class="header__link">Узнать &rarr;</a>
+          class="header__link" target="_blank">Узнать &rarr;</a>
       </p>
       <!-- DONE Эта картинка является контентным изображением, поэтому лучше вставить её через тег <img>. -->
       <img src="./images/header-image.png" alt="Картина 'Опять двойка'" class="header__main-illustration">
@@ -119,7 +119,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link" target="_blank">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -176,7 +176,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Обложка Салман Хан 'Весь мир - школа'" class="khan__book-pic">
-            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+            <a href="#" class="khan__buy-link" target="_blank">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -239,10 +239,10 @@
         <!-- DONE Логотипы можно оформить списком <ul>. Для <li> в таком случае допускается создание своего класса, названного по БЭМ, если он будет необходим. -->
 
         <ul class="resources__logo-zone">
-          <li><a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo"></a></li>
-          <li><a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo"></a></li>
-          <li><a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Лого Стрелка" class="resources__logo"></a></li>
-          <li><a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Лого Полка" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-strelka.svg" alt="Лого Стрелка" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-polka.svg" alt="Лого Полка" class="resources__logo"></a></li>
         </ul>
       </section>
       
@@ -259,13 +259,13 @@
           <nav>
             <ul class="footer__column-links">
               <li>
-                <a href="#" class="footer__column-link">Главная</a>
+                <a href="#" class="footer__column-link" target="_blank">Главная</a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">Концепция</a>
+                <a href="#" class="footer__column-link" target="_blank">Концепция</a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">Наставники</a>
+                <a href="#" class="footer__column-link" target="_blank">Наставники</a>
               </li>
             </ul>
           </nav>
@@ -275,19 +275,19 @@
           <nav>
             <ul class="footer__column-links">
               <li>
-                <a href="#" class="footer__column-link">
+                <a href="#" class="footer__column-link" target="_blank">
                   <img src="./images/facebook_color_white.svg" alt="Иконка Фейсбука" class="footer__social-icon">
                   Facebook
                 </a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">
+                <a href="#" class="footer__column-link" target="_blank">
                   <img src="./images/vk_color_white.svg" alt="Иконка ВКонтакте" class="footer__social-icon">
                   ВКонтакте
                 </a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">
+                <a href="#" class="footer__column-link" target="_blank">
                   <img src="./images/instagram_color_white.svg" alt="Иконка Инстаграм" class="footer__social-icon">
                   Instagram
                 </a>
